[Issue #11318] Shooting, ShootingDAO, ShootingAdminControler, MainFrameController, ShootingService, ShootingTest, should work

--- a/src/main/resources/fxml/shoutingFrame.fxml
+++ b/src/main/resources/fxml/shoutingFrame.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: dimgray;" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.Shouting_Admin_Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: dimgray;" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.ShootingAdminController">
    <children>
       <Button layoutX="118.0" layoutY="929.0" mnemonicParsing="false" onAction="#on_DemolitionPressed" prefHeight="81.0" prefWidth="292.0" style="-fx-background-color: darkgray;" text="Abbrechen" textFill="WHITE">
          <font>
