--- a/src/main/resources/fxml/shoutingFrame.fxml
+++ b/src/main/resources/fxml/shoutingFrame.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.ComboBox?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: dimgray;" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.ShootingAdminController">
    <children>
       <Button layoutX="118.0" layoutY="929.0" mnemonicParsing="false" onAction="#on_DemolitionPressed" prefHeight="81.0" prefWidth="292.0" style="-fx-background-color: darkgray;" text="Abbrechen" textFill="WHITE">
@@ -18,7 +19,7 @@
             <Font name="HP Simplified" size="43.0" />
          </font>
       </Button>
-      <ChoiceBox fx:id="cb_Profile" layoutX="404.0" layoutY="101.0" prefHeight="69.0" prefWidth="1254.0" />
+      <ChoiceBox fx:id="cb_Profile" layoutX="404.0" layoutY="101.0" prefHeight="69.0" prefWidth="1000.0" />
       <Label layoutX="268.0" layoutY="110.0" prefHeight="52.0" prefWidth="114.0" text="Profil:" textFill="WHITE">
          <font>
             <Font name="HP Simplified" size="43.0" />
@@ -39,17 +40,8 @@
             <Font size="35.0" />
          </font>
       </Label>
-      <Button layoutX="410.0" layoutY="237.0" mnemonicParsing="false" onAction="#on_DeleteButtonPressed" prefHeight="81.0" prefWidth="292.0" style="-fx-background-color: darkgray;" text="Löschen" textFill="WHITE">
-         <font>
-            <Font name="HP Simplified" size="43.0" />
-         </font>
-      </Button>
-      <Button layoutX="885.0" layoutY="237.0" mnemonicParsing="false" onAction="#on_EditPressed" prefHeight="81.0" prefWidth="292.0" style="-fx-background-color: darkgray;" text="Bearbeiten" textFill="WHITE">
-         <font>
-            <Font name="HP Simplified" size="43.0" />
-         </font>
-      </Button>
-      <Button layoutX="1366.0" layoutY="237.0" mnemonicParsing="false" onAction="#on_NewPressed" prefHeight="81.0" prefWidth="292.0" style="-fx-background-color: darkgray;" text="Neue" textFill="WHITE">
+
+      <Button layoutX="885.0" layoutY="237.0" mnemonicParsing="false" onAction="#on_EditPressed" prefHeight="81.0" prefWidth="292.0" style="-fx-background-color: darkgray;" text="Zu den Profilen" textFill="WHITE">
          <font>
             <Font name="HP Simplified" size="43.0" />
          </font>
