--- a/src/main/resources/fxml/mainFrame.fxml
+++ b/src/main/resources/fxml/mainFrame.fxml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" snapToPixel="false" style="-fx-background-color: dimgray;" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.MainFrameController">
    <children>
-      <Button layoutX="74.0" layoutY="353.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#on_StartSessionPressed" prefHeight="176.0" prefWidth="733.0" snapToPixel="false" style="-fx-background-color: darkgray;" text="Starte Session" textFill="WHITE">
+      <Button layoutX="595.0" layoutY="483.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#on_StartSessionPressed" prefHeight="176.0" prefWidth="733.0" snapToPixel="false" style="-fx-background-color: darkgray;" text="Starte Session" textFill="WHITE">
          <font>
             <Font name="HP Simplified" size="60.0" />
          </font>
       </Button>
-      <Button layoutX="712.0" layoutY="104.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#on_EndPressed" prefHeight="55.0" prefWidth="55.0" snapToPixel="false" style="-fx-background-image: url(&quot;. . /GuiImage/cross.png&quot;); -fx-background-size: 50px 50px; -fx-background-position: center 25px;" textFill="WHITE">
+      <Button layoutX="1249.0" layoutY="72.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#on_EndPressed" prefHeight="55.0" prefWidth="55.0" snapToPixel="false" style="-fx-background-image: url(&quot;. . /GuiImage/cross.png&quot;); -fx-background-size: 50px 50px; -fx-background-position: center 25px;" textFill="WHITE">
          <font>
             <Font name="HP Simplified" size="60.0" />
          </font>
+         <graphic>
+            <ImageView id="endButtonImage" fitHeight="55.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true" style="-fx-image: ..\image\cross.png;" />
+         </graphic>
       </Button>
    </children>
 </AnchorPane>
