--- a/src/main/resources/fxml/loginFrame.fxml
+++ b/src/main/resources/fxml/loginFrame.fxml
@@ -8,13 +8,13 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.LoginFrameController">
    <children>
-      <Button layoutX="993.0" layoutY="638.0" mnemonicParsing="false" onAction="#checkLogin" text="Bestätigen" AnchorPane.bottomAnchor="416.0" AnchorPane.leftAnchor="993.0" />
-      <Button layoutX="1236.0" layoutY="658.0" mnemonicParsing="false" onAction="#closeLogin" text="Abbrechen" AnchorPane.bottomAnchor="396.0" AnchorPane.rightAnchor="595.0" />
-      <TextField fx:id="adminField" layoutX="1041.0" layoutY="404.0" AnchorPane.rightAnchor="708.0" />
-      <Label layoutX="822.0" layoutY="415.0" text="Benutzername" AnchorPane.leftAnchor="822.0" />
-      <Label layoutX="840.0" layoutY="517.0" text="Passwort" AnchorPane.leftAnchor="840.0" />
+      <Button layoutX="700.0" layoutY="500.0" mnemonicParsing="false" onAction="#checkLogin" text="Bestätigen" />
+      <Button layoutX="982.0" layoutY="500.0" mnemonicParsing="false" onAction="#closeLogin" text="Abbrechen" />
+      <TextField fx:id="adminField" layoutX="900.0" layoutY="400.0" />
+      <Label layoutX="700.0" layoutY="400.0" text="Benutzername" AnchorPane.leftAnchor="704.0" />
+      <Label layoutX="700.0" layoutY="450.0" prefHeight="0.0" prefWidth="59.0" text="Passwort" />
       <Label fx:id="wrongCredentialsLabel" layoutX="899.0" layoutY="585.0" text="Benutzername oder Passwort falsch" textFill="RED" visible="false" AnchorPane.bottomAnchor="479.0" />
-      <PasswordField fx:id="passwordField" layoutX="1085.0" layoutY="516.0" AnchorPane.rightAnchor="664.0" />
-      <Label layoutX="959.0" layoutY="352.0" text="Geben Sie Benutzername und Passwort ein" AnchorPane.topAnchor="352.0" />
+      <PasswordField fx:id="passwordField" layoutX="900.0" layoutY="450.0" />
+      <Label layoutX="755.0" layoutY="342.0" text="Geben Sie Benutzername und Passwort ein" AnchorPane.topAnchor="342.0" />
    </children>
 </AnchorPane>
