--- a/src/main/resources/fxml/settingFrame.fxml
+++ b/src/main/resources/fxml/settingFrame.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -25,11 +26,11 @@
     <RowConstraints maxHeight="766.0" minHeight="10.0" prefHeight="505.25419425964355" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <TitledPane animated="false" layoutX="20.0" text="Profilverwaltung">
+      <TitledPane animated="false" text="Profilverwaltung">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="254.0" prefWidth="753.0">
                <children>
-                  <TableView fx:id="tableProfil" prefHeight="215.0" prefWidth="773.0">
+                  <TableView fx:id="tableProfil" prefHeight="215.0" prefWidth="787.0">
                      <columns>
                         <TableColumn fx:id="colProfilID" prefWidth="44.74237585067749" text="ID" />
                         <TableColumn fx:id="colProfilName" prefWidth="207.93091201782227" text="Name" />
@@ -46,12 +47,15 @@
                   <CheckBox fx:id="txProfilGreen" layoutX="394.0" layoutY="220.0" mnemonicParsing="false" />
                   <CheckBox fx:id="txProfilDrucken" layoutX="543.0" layoutY="220.0" mnemonicParsing="false" />
                   <CheckBox fx:id="txProfilFilter" layoutX="480.0" layoutY="220.0" mnemonicParsing="false" />
-                  <TextField fx:id="txProfilWatermark" editable="false" layoutX="586.0" layoutY="214.0" onMouseClicked="#bildUpload" prefHeight="27.0" prefWidth="114.0" text="Hochladen..." />
+                  <TextField fx:id="txProfilWatermark" editable="false" layoutX="586.0" layoutY="214.0" onMouseClicked="#watermarkUpload" prefHeight="27.0" prefWidth="114.0" text="Hochladen..." />
                   <Button layoutX="726.0" layoutY="216.0" mnemonicParsing="false" onAction="#saveProfil" text="ADD" />
                   <Button layoutX="678.0" layoutY="212.0" mnemonicParsing="false" onAction="#watermarkUpload" prefHeight="30.0" prefWidth="27.0" text="+" />
                </children>
             </AnchorPane>
         </content>
+         <padding>
+            <Insets left="20.0" top="20.0" />
+         </padding>
       </TitledPane>
       <TitledPane animated="false" prefHeight="769.0" prefWidth="1024.0" text="Kamera- &amp; Logoverwaltung" GridPane.rowIndex="1">
          <content>
@@ -61,7 +65,7 @@
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="200.0">
                            <children>
-                              <TableView fx:id="tableProfil1" layoutY="40.0" prefHeight="199.0" prefWidth="434.0">
+                              <TableView fx:id="tablePosition" layoutY="40.0" prefHeight="199.0" prefWidth="450.0">
                                  <columns>
                                     <TableColumn fx:id="colPositionID" prefWidth="44.74237585067749" text="ID" />
                                     <TableColumn fx:id="colPositionName" prefWidth="207.93091201782227" text="Name" />
@@ -75,12 +79,12 @@
                                  </font>
                               </Label>
                               <TextField fx:id="txPositionName" layoutX="49.0" layoutY="240.0" prefHeight="27.0" prefWidth="181.0" />
-                              <TextField fx:id="txPositionBild" editable="false" layoutX="245.0" layoutY="240.0" onAction="#positionUpload" onMouseClicked="#bildUpload" prefHeight="27.0" prefWidth="114.0" text="Hochladen..." />
+                              <TextField fx:id="txPositionBild" editable="false" layoutX="245.0" layoutY="240.0" onAction="#positionUpload" onMouseClicked="#positionUpload" prefHeight="27.0" prefWidth="114.0" text="Hochladen..." />
                               <Button layoutX="381.0" layoutY="240.0" mnemonicParsing="false" onAction="#savePosition" text="ADD" />
                               <Button layoutX="338.0" layoutY="239.0" mnemonicParsing="false" onAction="#positionUpload" prefHeight="30.0" prefWidth="27.0" text="+" />
-                              <TableView fx:id="tableProfil11" layoutX="538.0" layoutY="41.0" prefHeight="199.0" prefWidth="434.0">
+                              <TableView fx:id="tableKamPos" layoutX="538.0" layoutY="41.0" prefHeight="199.0" prefWidth="453.0">
                                  <columns>
-                                    <TableColumn fx:id="colKameraPositionID" prefWidth="44.74237585067749" text="ID" />
+                                    <TableColumn fx:id="colKamPosID" prefWidth="44.74237585067749" text="ID" />
                                     <TableColumn fx:id="colKamPosKamera" prefWidth="185.41546630859375" text="Kamera" />
                                     <TableColumn fx:id="colKamPosPosition" minWidth="0.0" prefWidth="202.0" text="Position" />
                                  </columns>
@@ -98,7 +102,7 @@
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <TableView fx:id="tableProfil2" layoutY="30.0" prefHeight="227.0" prefWidth="664.0">
+                              <TableView fx:id="tableLogo" layoutY="30.0" prefHeight="227.0" prefWidth="664.0">
                                  <columns>
                                     <TableColumn fx:id="colLogoID" prefWidth="44.74237585067749" text="ID" />
                                     <TableColumn fx:id="colLogoName" prefWidth="188.0234603881836" text="Name" />
@@ -111,7 +115,7 @@
                                  </columns>
                               </TableView>
                               <TextField fx:id="txLogoName" layoutX="44.0" layoutY="258.0" />
-                              <TextField fx:id="txLogoLogo" editable="false" layoutX="473.0" layoutY="256.0" onAction="#logoUpload" onMouseClicked="#bildUpload" prefHeight="27.0" prefWidth="114.0" text="Hochladen..." />
+                              <TextField fx:id="txLogoLogo" editable="false" layoutX="473.0" layoutY="256.0" onAction="#logoUpload" onMouseClicked="#logoUpload" prefHeight="27.0" prefWidth="114.0" text="Hochladen..." />
                               <Button layoutX="605.0" layoutY="258.0" mnemonicParsing="false" onAction="#saveLogo" text="ADD" />
                               <Button layoutX="564.0" layoutY="256.0" mnemonicParsing="false" onAction="#logoUpload" prefHeight="30.0" prefWidth="27.0" text="+" />
                               <TextField fx:id="txLogoX" layoutX="234.0" layoutY="256.0" prefHeight="27.0" prefWidth="52.0" />
@@ -129,6 +133,9 @@
                </children>
             </AnchorPane>
          </content>
+         <padding>
+            <Insets left="20.0" />
+         </padding>
       </TitledPane>
    </children>
 </GridPane>
