--- a/src/main/resources/fxml/loginFrame.fxml
+++ b/src/main/resources/fxml/loginFrame.fxml
@@ -4,17 +4,55 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.LoginFrameController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.LoginFrameController">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
+      <ColumnConstraints hgrow="SOMETIMES" percentWidth="80.0" />
+    <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints percentHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints percentHeight="50.0" vgrow="SOMETIMES" />
+    <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <Button layoutX="700.0" layoutY="500.0" mnemonicParsing="false" onAction="#checkLogin" text="Bestätigen" />
-      <Button layoutX="982.0" layoutY="500.0" mnemonicParsing="false" onAction="#closeLogin" text="Abbrechen" />
-      <TextField fx:id="adminField" layoutX="900.0" layoutY="400.0" />
-      <Label layoutX="700.0" layoutY="400.0" text="Benutzername" AnchorPane.leftAnchor="704.0" />
-      <Label layoutX="700.0" layoutY="450.0" prefHeight="0.0" prefWidth="59.0" text="Passwort" />
-      <Label fx:id="wrongCredentialsLabel" layoutX="899.0" layoutY="585.0" text="Benutzername oder Passwort falsch" textFill="RED" visible="false" AnchorPane.bottomAnchor="479.0" />
-      <PasswordField fx:id="passwordField" layoutX="900.0" layoutY="450.0" />
-      <Label layoutX="755.0" layoutY="342.0" text="Geben Sie Benutzername und Passwort ein" AnchorPane.topAnchor="342.0" />
+      <GridPane GridPane.columnIndex="1">
+        <columnConstraints>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" percentWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints percentHeight="70.0" vgrow="SOMETIMES" />
+          <RowConstraints percentHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Geben Sie Benutzername und Passwort ein" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
+      <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <columnConstraints>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints percentHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
+            <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
+          <RowConstraints percentHeight="20.0" valignment="BOTTOM" vgrow="SOMETIMES" />
+          <RowConstraints percentHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TextField fx:id="adminField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label text="Benutzername" GridPane.rowIndex="1" />
+            <Button mnemonicParsing="false" onAction="#closeLogin" text="Abbrechen" GridPane.rowIndex="4" />
+            <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="wrongCredentialsLabel" text="Benutzername oder Passwort falsch" textFill="RED" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label text="Passwort" GridPane.rowIndex="2" />
+            <Button mnemonicParsing="false" onAction="#checkLogin" text="Bestätigen" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+         </children>
+      </GridPane>
    </children>
-</AnchorPane>
+</GridPane>
