--- a/src/main/resources/fxml/mainFrame.fxml
+++ b/src/main/resources/fxml/mainFrame.fxml
@@ -3,17 +3,30 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" snapToPixel="false" style="-fx-background-color: dimgray;" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.MainFrameController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.MainFrameController">
+  <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
+    <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" percentWidth="80.0" />
+    <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" percentWidth="10.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints percentHeight="20.0" valignment="TOP" vgrow="SOMETIMES" />
+    <RowConstraints percentHeight="40.0" vgrow="SOMETIMES" />
+    <RowConstraints percentHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+      <RowConstraints percentHeight="10.0" vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <Button layoutX="595.0" layoutY="483.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onStartShootingPressed" prefHeight="176.0" prefWidth="733.0" snapToPixel="false" style="-fx-background-color: darkgray;" text="Starte Shooting" textFill="WHITE">
+      <Button fx:id="startbutton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onStartShootingPressed" snapToPixel="false" text="Starte Shooting" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <font>
-            <Font name="HP Simplified" size="60.0" />
+            <Font />
          </font>
       </Button>
-      <Button layoutX="1249.0" layoutY="72.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onEndPressed" prefHeight="55.0" prefWidth="55.0" snapToPixel="false" style="-fx-background-size: 50px 50px; -fx-background-position: center 25px; -fx-background-color: dimgray;" textFill="WHITE">
+      <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onEndPressed" prefHeight="55.0" prefWidth="55.0" snapToPixel="false" style="-fx-background-size: 50px 50px; -fx-background-position: center 25px; -fx-background-color: dimgray;" textFill="WHITE" GridPane.columnIndex="2">
          <font>
             <Font name="HP Simplified" size="60.0" />
          </font>
@@ -26,4 +39,4 @@
          </graphic>
       </Button>
    </children>
-</AnchorPane>
+</GridPane>
