--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -9,3 +9,11 @@
    -fx-pref-width: 15em;
    -fx-pref-height:2em;
    }
+
+#edit{
+   -fx-background-color: darkgray;
+   -fx-text-fill: white;
+   -fx-font-family: HP Simplified;
+   -fx-pref-width: 15em;
+   -fx-pref-height:2em;
+}
