--- a/src/main/resources/css/fullscreen.css
+++ b/src/main/resources/css/fullscreen.css
@@ -1,11 +1,21 @@
-
+.root{
+  -fx-background-color: black;
+}
 .button {
-   -fx-background-color: TRANSPARENT;
-   -fx-pref-width: 20em;
-   -fx-pref-height:3em;
+   -fx-background-repeat: no-repeat;
+   -fx-background-position: center;
+   -fx-background-size: 100%;
+   -fx-background-color: transparent;
+   -fx-pref-width: 4.5em;
+   -fx-pref-height:4.5em;
 }
 
 #fullscreen{
- -fx-pref-width: MAX_VALUE;
- -fx-pref-height:MAX_VALUE;
+ -fx-pref-width:100em;
+ -fx-pref-height:100em;
+}
+
+#button6{
+  -fx-background-color: red;
+
 }
